--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ remote_theme: pages-themes/architect@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
-show_downloads: ["true" or "false" (unquoted) to indicate whether to provide a download URL]
-google_analytics: [Your Google Analytics tracking ID]
+show_downloads: true
+# google_analytics: [Your Google Analytics tracking ID]
