--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-remote_theme: pages-themes/architect@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+title: Technical Assistance Platform
+description: Technical Assistance Platform for international consulting, by PMC
 show_downloads: true
-# google_analytics: [Your Google Analytics tracking ID]
+google_analytics:
+theme: jekyll-theme-architect
