--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Technical Assistance Platform
 description: Technical Assistance Platform for international consulting, by PMC
 show_downloads: true
 google_analytics:
-theme: jekyll-theme-architect
+theme: jekyll-theme-cayman
