--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Technical Assistance Platform
-description: Technical Assistance Platform for international consulting, by PMC
+title: Cayman theme
+description: Cayman is a clean, responsive theme for GitHub Pages.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
